--- a/JenkinsFile
+++ b/JenkinsFile
@@ -29,7 +29,7 @@ pipeline {
     stage('Build Docker Images') {
       steps {
         script {
-          sh 'docker build -f Dockerfile . -t ${REGISTRY}/chatservice:latest'
+          sh 'docker build -f DockerFile . -t ${REGISTRY}/chatservice:latest'
         }
       }
     }
