--- a/JenkinsFile
+++ b/JenkinsFile
@@ -50,7 +50,7 @@ pipeline {
         steps {
             script {
                 withCredentials([usernamePassword(credentialsId: 'servercred', passwordVariable: 'pwd', usernameVariable: 'username')]) {
-                sh 'echo ${username}'
+                sh 'echo ${username}@${remote.host}'
                 sh 'sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${username}@${remote.host} "[[ ! -d ~/chatservice ]] && mkdir ~/chatservice"'
                 sh 'sshpass -p ${pwd} scp -r -o StrictHostKeyChecking=no ./compose-prod.yml ./prometheus/prometheus.yml ${username}@${remote.host}:~/chatservice' 
                 }
