--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,6 +3,8 @@ remote.name = 'dickson'
 remote.host = '192.168.23.31'
 remote.allowAnyHosts = true
 
+def host = '192.168.23.31'
+
 pipeline {
    agent any
    tools {
@@ -51,8 +53,8 @@ pipeline {
             script {
                 withCredentials([usernamePassword(credentialsId: 'servercred', passwordVariable: 'pwd', usernameVariable: 'username')]) {
                 sh 'echo ${username}@${remote.host}'
-                sh 'sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${username}@${remote.host} "[[ ! -d ~/chatservice ]] && mkdir ~/chatservice"'
-                sh 'sshpass -p ${pwd} scp -r -o StrictHostKeyChecking=no ./compose-prod.yml ./prometheus/prometheus.yml ${username}@${remote.host}:~/chatservice' 
+                sh 'sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${username}@${host} "[[ ! -d ~/chatservice ]] && mkdir ~/chatservice"'
+                sh 'sshpass -p ${pwd} scp -r -o StrictHostKeyChecking=no ./compose-prod.yml ./prometheus/prometheus.yml ${username}@${host}:~/chatservice' 
                 }
               }
      }
