--- a/JenkinsFile
+++ b/JenkinsFile
@@ -17,6 +17,7 @@ pipeline {
     REGISTRY_USR = 'elitekaycy'
     REGISTRY_CREDENTIALS = credentials('dockerhub') 
     SERVER_CRED = credentials('servercred')
+    HOST='192.168.23.21'
   }
 
   stages {
@@ -35,7 +36,7 @@ pipeline {
           sh 'docker build -f DockerFile . -t ${REGISTRY_USR}/chatservice:latest'
         }
       }
-    }
+    
 
     stage('Push Docker Images') {
       steps {
@@ -52,7 +53,7 @@ pipeline {
         steps {
             script {
                 withCredentials([usernamePassword(credentialsId: 'servercred', passwordVariable: 'pwd', usernameVariable: 'username')]) {
-                sh 'echo ${username}@${host}'
+                sh 'echo ${username}@${HOST}'
                 sh 'sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${username}@${host} "[[ ! -d ~/chatservice ]] && mkdir ~/chatservice"'
                 sh 'sshpass -p ${pwd} scp -r -o StrictHostKeyChecking=no ./compose-prod.yml ./prometheus/prometheus.yml ${username}@${host}:~/chatservice' 
                 }
