--- a/JenkinsFile
+++ b/JenkinsFile
@@ -50,9 +50,9 @@ pipeline {
                     remote.password = env.SERVER_CRED_PSW
                     remote.allowAnyHosts = true
 
-                    sshCommand remote: remote, command: "mkdir -p ~/chatservice"
 
-                    sshPut remote: remote, from: 'compose-prod.yml', into: '~/chatservice/'
+                    sshCommand remote: remote, command: "mkdir -p /chatservice"
+                    sshPut remote: remote, from: 'compose-prod.yml', into: '/chatservice'
                 }
             }
         }
