--- a/compose-prod.yml
+++ b/compose-prod.yml
@@ -6,7 +6,7 @@ services:
     restart: unless-stopped
     volumes:
       - prometheus-data:/prometheus
-      - prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
     networks:
